styling finalised, missing toggle and form

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
   <link rel="stylesheet" href="./css/stylesheet.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,9 @@
 
 <div class="wrapper">
 <div id="beer-display" class="flex"></div>
+<button>
 <div id="toggle-info"></div>
+</button>
 </div>
 </body>
 </html>
