changes in toggle button

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <div class="wrapper">
 <div id="beer-display" class="flex"></div>
-<button>
+<!-- <button>
 <div id="toggle-info"></div>
-</button>
+</button> -->
 </div>
 </body>
 </html>
